--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Default Statcounter code for kaneki
+https://ilyassezzam.github.io/IlyassPortfolio/ -->
+<script type="text/javascript">
+var sc_project=12942193; 
+var sc_invisible=1; 
+var sc_security="171f55ef"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12942193/0/171f55ef/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="./logo192.png" sizes="100x100"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
